@@ -1,3 +1,14 @@
+2013-01-17  Dominic Cooney  <dominicc@chromium.org>
+
+        Unreviewed, re-land r140051.
+
+        I overzealously rolled this out; the test was intended to be
+        skipped, but was not skipped because of a typo in Skipped. See
+        <https://bugs.webkit.org/show_bug.cgi?id=107210>
+
+        * Parser/html-parser-srcdoc.html: Added.
+        * Skipped: Big-P Parser.
+
 2013-01-17  Sheriff Bot  <webkit.review.bot@gmail.com>
 
         Unreviewed, rolling out r140051.
